// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when "liked" is false 1`] = `
<div
  className="PostStats"
>
  0 people like this post.
</div>
`;

exports[`renders correctly when "liked" is true 1`] = `
<div
  className="PostStats"
>
  1 person likes this post.
</div>
`;
